# skin-a-cat-pipeline

./: .gitignore  .replit  114_adversarial_analysis.py  LICENSE  METHODOLOGY_TRANSPARENCY.md  README.md  VERIFY.md  app.py  config.py  coordinates.py  cst_comparison.py  doppler.py  environment-windows.yml  environment.yml  hi_maps.py  highz_refraction_analysis.py  jades_blind_test.py  jades_dr4_blind_test.py  jades_real_blind_test.py  lensing.py  main.py  predictive_test.py  pyproject.toml  replit.md  repro_114_aggregate.py  repro_bullet.py  reproducibility_notebook.ipynb  requirements.txt
data/: 114_cluster_aggregate.csv  el_gordo_galaxy_coordinates.csv  galaxy_coordinates.csv  gn_z11_galaxy_coordinates.csv
data/plots/: bullet_lensing_table.txt  ceers_chi2.txt
docs/: multi_messenger_prediction.md  which_theory_makes_more_sense.md
results/: 114_adversarial_analysis.csv  114_adversarial_summary.txt  bullet_lensing_results.csv  clash_preprocessed.csv  hi4pi_bullet_sample.csv  jades_dr4_blind_test.csv  predictive_test_results.csv
results/jades_dr4_blind_test_v1/: jades_dr4_blind_test.csv
results/release_v1.0/: README.md  arXiv_abstract.txt  ceers_analysis.txt  ceers_methodology_note.txt
results/release_v1.0/code/: app.py  config.py  refraction.py  statistical_analysis.py
results/release_v1.0/data/: jades_z14_galaxy_coordinates.csv
results/release_v1.2/: jades_dr3_real_blind_test.csv
