[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "healpy>=1.18.1",
    "jax>=0.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "openai>=2.8.1",
    "pandas>=2.2.3",
    "plotly>=6.5.0",
    "scipy>=1.15.2",
    "streamlit>=1.52.0",
]
